cmake_minimum_required(VERSION 2.8)
project(test)
 
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS} user/local/include/opencv4)


# 2-1
add_executable(2-1_test 2-1.cpp)
target_link_libraries(2-1_test ${OpenCV_LIBS})

# 2-2
add_executable(2-2_test 2-2.cpp)
target_link_libraries(2-2_test ${OpenCV_LIBS})

# 2-3
add_executable(2-3_test 2-3.cpp)
target_link_libraries(2-3_test ${OpenCV_LIBS})

# 2-4
add_executable(2-4_test 2-4.cpp)
target_link_libraries(2-4_test ${OpenCV_LIBS})

# 2-5
add_executable(2-5_test 2-5.cpp)
target_link_libraries(2-5_test ${OpenCV_LIBS})

# 2-6
add_executable(2-6_test 2-6.cpp)
target_link_libraries(2-6_test ${OpenCV_LIBS})

# 2-7
add_executable(2-7_test 2-7.cpp)
target_link_libraries(2-7_test ${OpenCV_LIBS})

# 2-8
add_executable(2-8_test 2-8.cpp)
target_link_libraries(2-8_test ${OpenCV_LIBS})

# 2-9
add_executable(2-9_test 2-9.cpp)
target_link_libraries(2-9_test ${OpenCV_LIBS})

# 2-10
add_executable(2-10_test 2-10.cpp)
target_link_libraries(2-10_test ${OpenCV_LIBS})

# 2-11
add_executable(2-11_test 2-11.cpp)
target_link_libraries(2-11_test ${OpenCV_LIBS})

# 2-12
add_executable(2-12_test 2-12.cpp)
target_link_libraries(2-12_test ${OpenCV_LIBS})

# 2-13
add_executable(2-13_test 2-13.cpp)
target_link_libraries(2-13_test ${OpenCV_LIBS})

# 2-14
add_executable(2-14_test 2-14.cpp)
target_link_libraries(2-14_test ${OpenCV_LIBS})

# 2-15
#add_executable(2-15_test 2-15.cpp)
#target_link_libraries(2-15_test ${OpenCV_LIBS})

# 2-16
#add_executable(2-16_test 2-16.cpp)
#target_link_libraries(2-16_test ${OpenCV_LIBS})

# 2-17
add_executable(2-17_test 2-17.cpp)
target_link_libraries(2-17_test ${OpenCV_LIBS})

# 2-18
add_executable(2-18_test 2-18.cpp)
target_link_libraries(2-18_test ${OpenCV_LIBS})

# 2-19
add_executable(2-19_test 2-19.cpp)
target_link_libraries(2-19_test ${OpenCV_LIBS})

# 2-20
add_executable(2-20_test 2-20.cpp)
target_link_libraries(2-20_test ${OpenCV_LIBS})

# 2-21
add_executable(2-21_test 2-21.cpp)
target_link_libraries(2-21_test ${OpenCV_LIBS})

# 2-22
# add_executable(2-22_test 2-22.cpp)
# target_link_libraries(2-22_test ${OpenCV_LIBS})

# 2-23
add_executable(2-23_test 2-23.cpp)
target_link_libraries(2-23_test ${OpenCV_LIBS})

# 2-24
add_executable(2-24_test 2-24.cpp)
target_link_libraries(2-24_test ${OpenCV_LIBS})

# 2-25
add_executable(2-25_test 2-25.cpp)
target_link_libraries(2-25_test ${OpenCV_LIBS})

# 2-26
add_executable(2-26_test 2-26.cpp)
target_link_libraries(2-26_test ${OpenCV_LIBS})

# 2-27
add_executable(2-27_test 2-27.cpp)
target_link_libraries(2-27_test ${OpenCV_LIBS})

# 2-28
add_executable(2-28_test 2-28.cpp)
target_link_libraries(2-28_test ${OpenCV_LIBS})

# 2-29
add_executable(2-29_test 2-29.cpp)
target_link_libraries(2-29_test ${OpenCV_LIBS})

# 2-30
add_executable(2-30_test 2-30.cpp)
target_link_libraries(2-30_test ${OpenCV_LIBS})