# 3-1 
add_executable(3-1_test 3-1.cpp)
target_link_libraries(3-1_test ${OpenCV_LIBS})

# 3-2 
add_executable(3-2_test 3-2.cpp)
target_link_libraries(3-2_test ${OpenCV_LIBS})

# 3-3 
add_executable(3-3_test 3-3.cpp)
target_link_libraries(3-3_test ${OpenCV_LIBS})

# 3-4 
add_executable(3-4_test 3-4.cpp)
target_link_libraries(3-4_test ${OpenCV_LIBS})

# 3-5 
add_executable(3-5_test 3-5.cpp)
target_link_libraries(3-5_test ${OpenCV_LIBS})

# 3-6 
add_executable(3-6_test 3-6.cpp)
target_link_libraries(3-6_test ${OpenCV_LIBS})

# 3-7 
add_executable(3-7_test 3-7.cpp)
target_link_libraries(3-7_test ${OpenCV_LIBS})

# 3-8 
add_executable(3-8_test 3-8.cpp)
target_link_libraries(3-8_test ${OpenCV_LIBS})

# 3-8 
add_executable(3-9_test 3-9.cpp)
target_link_libraries(3-9_test ${OpenCV_LIBS})

# 3-10 
add_executable(3-10_test 3-10.cpp)
target_link_libraries(3-10_test ${OpenCV_LIBS})

# 3-11
add_executable(3-11_test 3-11.cpp)
target_link_libraries(3-11_test ${OpenCV_LIBS})

# 3-12
add_executable(3-12_test 3-12.cpp)
target_link_libraries(3-12_test ${OpenCV_LIBS})

# 3-13
add_executable(3-13_test 3-13.cpp)
target_link_libraries(3-13_test ${OpenCV_LIBS})

# 3-14
add_executable(3-14_test 3-14.cpp)
target_link_libraries(3-14_test ${OpenCV_LIBS})