# 4-1 
add_executable(4-1_test 4-1.cpp)
target_link_libraries(4-1_test ${OpenCV_LIBS})

# 4-2 
add_executable(4-2_test 4-2.cpp)
target_link_libraries(4-2_test ${OpenCV_LIBS})

# 4-3 
add_executable(4-3_test 4-3.cpp)
target_link_libraries(4-3_test ${OpenCV_LIBS})

# 4-4 
add_executable(4-4_test 4-4.cpp)
target_link_libraries(4-4_test ${OpenCV_LIBS})

# 4-5
add_executable(4-5_test 4-5.cpp)
target_link_libraries(4-5_test ${OpenCV_LIBS})

# 4-6
add_executable(4-6_test 4-6.cpp)
target_link_libraries(4-6_test ${OpenCV_LIBS})

# 4-8
add_executable(4-8_test 4-8.cpp)
target_link_libraries(4-8_test ${OpenCV_LIBS})

# 4-9
add_executable(4-9_test 4-9.cpp)
target_link_libraries(4-9_test ${OpenCV_LIBS})

# 4-10
add_executable(4-10_test 4-10.cpp)
target_link_libraries(4-10_test ${OpenCV_LIBS})

# 4-11
add_executable(4-11_test 4-11.cpp)
target_link_libraries(4-11_test ${OpenCV_LIBS})