# 4-1 
add_executable(4-1_test 4-1.cpp)
target_link_libraries(4-1_test ${OpenCV_LIBS})

# 4-2 
add_executable(4-2_test 4-2.cpp)
target_link_libraries(4-2_test ${OpenCV_LIBS})

# 4-3 
add_executable(4-3_test 4-3.cpp)
target_link_libraries(4-3_test ${OpenCV_LIBS})

# 4-4 
add_executable(4-4_test 4-4.cpp)
target_link_libraries(4-4_test ${OpenCV_LIBS})

# 4-5
add_executable(4-5_test 4-5.cpp)
target_link_libraries(4-5_test ${OpenCV_LIBS})

# 4-6
add_executable(4-6_test 4-6.cpp)
target_link_libraries(4-6_test ${OpenCV_LIBS})

# 4-8
add_executable(4-8_test 4-8.cpp)
target_link_libraries(4-8_test ${OpenCV_LIBS})

# 4-9
add_executable(4-9_test 4-9.cpp)
target_link_libraries(4-9_test ${OpenCV_LIBS})

# 4-10
add_executable(4-10_test 4-10.cpp)
target_link_libraries(4-10_test ${OpenCV_LIBS})

# 4-11
add_executable(4-11_test 4-11.cpp)
target_link_libraries(4-11_test ${OpenCV_LIBS})

# 4-12
add_executable(4-12_test 4-12.cpp)
target_link_libraries(4-12_test ${OpenCV_LIBS})

# 4-13
add_executable(4-13_test 4-13.cpp)
target_link_libraries(4-13_test ${OpenCV_LIBS})

# 4-14
add_executable(4-14_test 4-14.cpp)
target_link_libraries(4-14_test ${OpenCV_LIBS})

# 4-15
add_executable(4-15_test 4-15.cpp)
target_link_libraries(4-15_test ${OpenCV_LIBS})

# 4-16
add_executable(4-16_test 4-16.cpp)
target_link_libraries(4-16_test ${OpenCV_LIBS})

# 4-17
add_executable(4-17_test 4-17.cpp)
target_link_libraries(4-17_test ${OpenCV_LIBS})

# 4-18
add_executable(4-18_test 4-18.cpp)
target_link_libraries(4-18_test ${OpenCV_LIBS})

# 4-19
add_executable(4-19_test 4-19.cpp)
target_link_libraries(4-19_test ${OpenCV_LIBS})

# 4-20
add_executable(4-20_test 4-20.cpp)
target_link_libraries(4-20_test ${OpenCV_LIBS})

# 4-21
add_executable(4-21_test 4-21.cpp)
target_link_libraries(4-21_test ${OpenCV_LIBS})