# 5-1 
add_executable(5-1_test 5-1.cpp)
target_link_libraries(5-1_test ${OpenCV_LIBS})

# 5-2 
add_executable(5-2_test 5-2.cpp)
target_link_libraries(5-2_test ${OpenCV_LIBS})

# 5-3 
add_executable(5-3_test 5-3.cpp)
target_link_libraries(5-3_test ${OpenCV_LIBS})

# 5-4 
add_executable(5-4_test 5-4.cpp)
target_link_libraries(5-4_test ${OpenCV_LIBS})

# 5-5
add_executable(5-5_test 5-5.cpp)
target_link_libraries(5-5_test ${OpenCV_LIBS})

# 5-6
add_executable(5-6_test 5-6.cpp)
target_link_libraries(5-6_test ${OpenCV_LIBS})

# 5-7
add_executable(5-7_test 5-7.cpp)
target_link_libraries(5-7_test ${OpenCV_LIBS})

# 5-8
add_executable(5-8_test 5-8.cpp)
target_link_libraries(5-8_test ${OpenCV_LIBS})

# 5-9
add_executable(5-9_test 5-9.cpp)
target_link_libraries(5-9_test ${OpenCV_LIBS})

# 5-10
# add_executable(5-10_test 5-10.cpp)
# target_link_libraries(5-10_test ${OpenCV_LIBS})

# 5-11
add_executable(5-11_test 5-11.cpp)
target_link_libraries(5-11_test ${OpenCV_LIBS})

# 5-12
# add_executable(5-12_test 5-12.cpp)
# target_link_libraries(5-12_test ${OpenCV_LIBS})

# 5-13
add_executable(5-13_test 5-13.cpp)
target_link_libraries(5-13_test ${OpenCV_LIBS})

# 5-14
# add_executable(5-14_test 5-14.cpp)
# target_link_libraries(5-14_test ${OpenCV_LIBS})

# 5-15
add_executable(5-15_test 5-15.cpp)
target_link_libraries(5-15_test ${OpenCV_LIBS})

# 5-15
add_executable(sample_test sample.cpp)
target_link_libraries(sample_test ${OpenCV_LIBS})